open ai and ollama integrated in chat

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -8,6 +8,7 @@
   <ItemGroup>
   </ItemGroup>
   <ItemGroup>
+    <PackageVersion Include="OpenAI" Version="2.4.0" />
     <PackageVersion Include="Svg.Skia" Version="1.0.0.1" />
     <PackageVersion Include="Uno.WinUI.Svg" Version="6.2.58" />
   </ItemGroup>
