--- a/CAI_design_1_chat/CAI_design_1_chat.csproj
+++ b/CAI_design_1_chat/CAI_design_1_chat.csproj
@@ -38,5 +38,8 @@
             SkiaRenderer;
         </UnoFeatures>
     </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="OpenAI" />
+    </ItemGroup>
 
 </Project>
