--- a/CAI_design_1_chat/CAI_design_1_chat.csproj
+++ b/CAI_design_1_chat/CAI_design_1_chat.csproj
@@ -39,7 +39,14 @@
         </UnoFeatures>
     </PropertyGroup>
     <ItemGroup>
+      <PackageReference Include="Microsoft.Data.Sqlite" />
       <PackageReference Include="OpenAI" />
     </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Database\schema.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
 
 </Project>
