file upload ok auto extract to be change

--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -12,5 +12,6 @@
     <PackageVersion Include="OpenAI" Version="2.4.0" />
     <PackageVersion Include="Svg.Skia" Version="1.0.0.1" />
     <PackageVersion Include="Uno.WinUI.Svg" Version="6.2.58" />
+    <PackageVersion Include="iText7" Version="8.0.2" />
   </ItemGroup>
 </Project>
