--- a/CAI_design_1_chat/CAI_design_1_chat.csproj
+++ b/CAI_design_1_chat/CAI_design_1_chat.csproj
@@ -40,6 +40,7 @@
     </PropertyGroup>
     <ItemGroup>
       <PackageReference Include="Microsoft.Data.Sqlite" />
+      <PackageReference Include="iText7" />
       <PackageReference Include="OpenAI" />
     </ItemGroup>
 
