--- a/CAI_design_1_chat/CAI_design_1_chat.csproj
+++ b/CAI_design_1_chat/CAI_design_1_chat.csproj
@@ -48,6 +48,9 @@
     <Content Include="Database\schema.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Database\migration_v3.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
