ok rename now in file_data

--- a/CAI_design_1_chat/CAI_design_1_chat.csproj
+++ b/CAI_design_1_chat/CAI_design_1_chat.csproj
@@ -51,6 +51,9 @@
     <Content Include="Database\migration_v3.sql">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Database\migration_v4.sql">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
